--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "chart.js": "^4.3.0",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.10",
     "react": "^18.2.0",
+    "react-calendar": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-modern-drawer": "^1.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
