--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.3.0",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.10",
+    "jodit-react": "^1.3.39",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-chartjs-2": "^5.2.0",
